--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -181,7 +181,6 @@ A TESTER
 .hebergement {
     display: flex;
     margin-top: 20px;
-    width: 1380px;
     justify-content: space-between;
 }
 
@@ -192,6 +191,7 @@ A TESTER
     max-width: 879px;
     max-height: 528px;
     margin-right: 30px;
+    padding: 15px;
 
 }
 
@@ -208,16 +208,17 @@ A TESTER
 .tout-logement {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .logement {
     background-color: white;
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 1%;
     padding: 3px;
-    width: 267px;
-    height: 190;
+    width: 29%;
+    height: 0%;
     border-radius: 15px;
     box-shadow: 0 0 8px darkgray;
 }
@@ -232,6 +233,7 @@ A TESTER
 
 .logement-titre {
     font-weight: 600;
+    font-size: 13px;
     padding: 5px 10px 5px 10px;
 }
 
@@ -260,7 +262,7 @@ A TESTER
 }
 
 .fa-solid.fa-star {
-    font-size: 12px;
+    font-size: 50%;
     color:#0065FC;
 }
 
@@ -411,7 +413,6 @@ A TESTER
     }
 
     .populaire {
-        max-width: 350px;
         margin-top: 20px;
     }
 
@@ -451,7 +452,6 @@ A TESTER
 
     .logement {
         margin-top: 20px;
-        max-width: 350px;
         margin-top: 20px;
         width: auto;
     }
@@ -482,5 +482,27 @@ A TESTER
     main {
         width: 90%;
         margin: auto;
+    }
+
+    .hebergement {
+        width: auto;
+        flex-direction: column-reverse;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        margin-right: 0px;
+        margin-top: 30px;
+        max-height: none;
+        max-width: none;
+    }
+
+    .tout-logement {
+        width: 100%;
+    }
+
+    .logement {
+        width: 46%;
     }
 }
