--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,7 @@ body {
     margin: auto;
     max-width: 1440px;
     font-family: 'Raleway', sans-serif;
+    box-shadow: 0px 0px 35px lightgray;
 }
 
 main {
@@ -362,7 +363,7 @@ A TESTER
     height: 285px;
     width: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 
 .nom-carte-xl {
@@ -383,7 +384,7 @@ A TESTER
     height: 146px;
     width: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 
 .nom-carte-l {
@@ -401,7 +402,7 @@ A TESTER
     height: 90px;
     width: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 
 .nom-carte-s {
@@ -426,7 +427,7 @@ A TESTER
     height: 117px;
     width: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 
 .nom-carte-m {
